@@ -1,4 +1,4 @@
-.TH SSDEEP "1" "Version 2.8 \- RBF DATE" "ManTech International" "ManTech International"
+.TH SSDEEP "1" "Version 2.8 \- RBF DATE" "Kyrus" "Kyrus"
 
 .SH NAME
 ssdeep - Computes context triggered piecewise hashes
@@ -127,14 +127,15 @@ things like being unable to load the matching file, specifying
 both bare and relative paths, etc.
 
 .SH AUTHOR
-ssdeep was written by Jesse Kornblum, ManTech International Corporation
+ssdeep was written by Jesse Kornblum, Kyrus
 .br
-research (%at%) jessekornblum dott com
+research@jessekornblum.com
 
 .PP
 .SH COPYRIGHT
-This program is Copyright (C) 2006-2010 ManTech International Corporation
-and is licensed under the terms of the General Public License. See the 
+This program is Copyright (C) 2006-2012 ManTech International Corporation
+and Kyrus. It is 
+licensed under the terms of the General Public License. See the 
 file COPYING for details.
 
 .SH SEE ALSO
